--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=HjhC1Kra#4Y8FxsCzvvkS-93uyStFOlUUWmnfJm1iUn5iO3UFurQ",
       "required": true
     }  
 },
